Add New Project to Project Hub For Testing

--- a/potato/base_html/base_template.html
+++ b/potato/base_html/base_template.html
@@ -35,6 +35,8 @@
     <script src="/static/utils/tooltip.js" defer></script>
     <script src="/static/utils/navigation.js" defer></script>
 
+    {{var_elems}}
+
     {{annotation}}
    
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
