--- a/potato/base_html/base_template.html
+++ b/potato/base_html/base_template.html
@@ -27,15 +27,17 @@
     </div>
     
     <script src="/static/utils/keylistener.js" defer></script>
+    <script src="/static/utils/new-span.js" defer></script>
     <script src="/static/utils/span.js" defer></script>
     <script src="/static/utils/range.js" defer></script>
     <script src="/static/utils/checkbox.js" defer></script>
     <script src="/static/utils/post.js" defer></script>
     <script src="/static/utils/countdown.js" defer></script>
+    <script src="/static/utils/request.js" defer></script>
     <script src="/static/utils/tooltip.js" defer></script>
     <script src="/static/utils/navigation.js" defer></script>
 
-    {{var_elems}}
+    {{var_elems|safe}}
 
     {{annotation}}
    
