Add node library for the fun stuff

--- a/potato/base_html/base_template.html
+++ b/potato/base_html/base_template.html
@@ -25,6 +25,8 @@
       <a href="javascript:void(0)" class="closebtn" target_id="Statpanel" onclick="closeNav(this.getAttribute('target_id'))">&times;</a>
       {{statistics_nav}}
     </div>
+
+    <script src="/static/temp/potato.umd.cjs" defer></script>
     
     <script src="/static/utils/keylistener.js" defer></script>
     <script src="/static/utils/new-span.js" defer></script>
