--- a/potato/base_html/examples/kwargs_example.html
+++ b/potato/base_html/examples/kwargs_example.html
@@ -5,7 +5,7 @@
       <div class="col-md-12">
         <div name="context_text" class="instance">
 
-          <div name="instance_text">
+          <div id="instance-text" name="instance_text">
             {{instance}} <br/>
           </div>
                     
