--- a/potato/base_html/base_template.html
+++ b/potato/base_html/base_template.html
@@ -26,7 +26,7 @@
       {{statistics_nav}}
     </div>
 
-    <script src="/static/utils/potato.umd.cjs" defer></script>
+    <script src="/static/utils/potato.js" defer></script>
     
     <script src="/static/utils/keylistener.js" defer></script>
     <script src="/static/utils/new-span.js" defer></script>
